--- a/src/lab/Introduction.html
+++ b/src/lab/Introduction.html
@@ -108,7 +108,7 @@ Structural dynamics is a concept of structural engineering which deals with the 
 In this virtual structural dynamics laboratory, the student will perform tests on different types of structures for different ground motions(earthquake data). These conditions and/or constraints are designed to reinforce classroom theory, by performing required tests in this virtual lab, analyze subsequent data, and compare the results with theory. For results, graphs and tables are generated after completion of computing experiment.
  <br/>
 
-<p><b> Please note:</b> </p>
+</p><p><b> Please note:</b> </p>
 <p> - This lab requires few Software Dependencies to run the Simulations </p>
 <ol>
 <li> Adobe Flash Plugin, Java1.7, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li>
@@ -120,7 +120,7 @@ In this virtual structural dynamics laboratory, the student will perform tests o
 <li> Install Adobe Flash Plugin - This will enable you to run the experiments that need Flash support. Please follow the  <a href="documents/installFlash.html">link</a> to install the Flash Plugin</li>
 <li> Install VirtualBox - Virtual Labs offers a free download of a customized VirtualBox with the required pre installed all the software dependencies(Java 1.7, Java3D-1.5.2, IcedTea Plugin and Adobe Flash Plugin). Please follow the <a href="https://docs.google.com/document/d/1mX0YMtFk4Dxn_vQBJmUJ8pIOPE2hVf6AscJMdLWd9k8/edit#">link</a> to download, install and use VirtualBox for Virtual Labs.</li>
 </ol>
-	</p>
+	<p></p>
 </div>						</div>
 					</div>
 			</div>
