--- a/src/lab/exp3/Quizzes.html
+++ b/src/lab/exp3/Quizzes.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
 	<!--Google Tag Manager-->
 	<script class="gtm">
 	(function(w, d, s, l, i) {
@@ -19,20 +17,20 @@
 	})(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
 	</script>
 	<!--End Google Tag Manager-->
-	<meta charset="utf-8" />
-	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description" />
-	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author" />
+	<meta charset="utf-8"/>
+	<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
+	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
 	<title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-	<link href="../images/favicon.ico" rel="shortcut icon" />
-	<link href="../css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../images/favicon.ico" rel="shortcut icon"/>
+	<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 	<!-- Important Owl stylesheet -->
-	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
-	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
-	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
+	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
+	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 	<!-- Custom CSS -->
-	<link href="../css/style.css" rel="stylesheet" />
+	<link href="../css/style.css" rel="stylesheet"/>
 	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
@@ -85,7 +83,7 @@
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header page-scroll">
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
-						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg" /></a>
+						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg"/></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
@@ -111,7 +109,7 @@
 		<div id="content">
 			<div class="container-fluid">
 				<div class="row">
-					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;" /> </div>
+					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/> </div>
 				<!-- row end -->
 			</div>
 			<!-- container-fluid end for slider -->
@@ -180,43 +178,43 @@
 								<!-- <font face="Arial"><big><big>General Knowledge Quiz</big></big></font></p> -->
 								<div class="qheader"> 1. Amplitude of forced vibration depends on initial conditions. </div>
 								<div class="qselections">
-									<input name="question1" type="radio" value="a" />a) True
+									<input name="question1" type="radio" value="a"/>a) True
 									<br/>
-									<input name="question1" type="radio" value="b" />b) False
+									<input name="question1" type="radio" value="b"/>b) False
 									<br/> </div>
 								<br/>
 								<div class="qheader"> 2) We get peak response when structure is forced to vibrate at its natural frequency.</div>
 								<div class="qselections">
-									<input name="question2" type="radio" value="a" />a) True
+									<input name="question2" type="radio" value="a"/>a) True
 									<br/>
-									<input name="question2" type="radio" value="b" />b) False
+									<input name="question2" type="radio" value="b"/>b) False
 									<br/> </div>
 								<br/>
 								<div class="qheader"> 3) Amplitude of vibration increasing when frequency ration if greater than 1.</div>
 								<div class="qselections">
-									<input name="question3" type="radio" value="a" />a) True
+									<input name="question3" type="radio" value="a"/>a) True
 									<br/>
-									<input name="question3" type="radio" value="b" />b) False
+									<input name="question3" type="radio" value="b"/>b) False
 									<br/> </div>
 								<br/>
 								<div class="qheader"> 4) Maximum response of the structure will be different for different earthquakes. </div>
 								<div class="qselections">
-									<input name="question4" type="radio" value="a" />a) True
+									<input name="question4" type="radio" value="a"/>a) True
 									<br/>
-									<input name="question4" type="radio" value="b" />b) False
+									<input name="question4" type="radio" value="b"/>b) False
 									<br/> </div>
 								<br/>
 								<div class="qheader"> 5) Undamped structure will become unstable if it is vibrating at resonating frequency.</div>
 								<div class="qselections">
-									<input name="question5" type="radio" value="a" />a) True
+									<input name="question5" type="radio" value="a"/>a) True
 									<br/>
-									<input name="question5" type="radio" value="b" />b) False
+									<input name="question5" type="radio" value="b"/>b) False
 									<br/> </div>
 							</form>
 							<form>
 								<div align="center">
-									<input name="B1" onclick="gradeit()" type="button" value="Grade Me!" />
-									<input name="B2" onclick="document.myquiz.reset()" type="button" value="Reset" />
+									<input name="B1" onclick="gradeit()" type="button" value="Grade Me!"/>
+									<input name="B2" onclick="document.myquiz.reset()" type="button" value="Reset"/>
 								</div>
 							</form>
 							<p></p>
@@ -290,7 +288,7 @@
 		});
 	});
 	</script>
-</body>
-<!-- jQuery -->
 
-</html>
+
+
+</body><!-- jQuery --></html>
