--- a/src/lab/exp5/Introduction.html
+++ b/src/lab/exp5/Introduction.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
 	<!--Google Tag Manager-->
 	<script class="gtm">
 	(function(w, d, s, l, i) {
@@ -19,20 +17,20 @@
 	})(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
 	</script>
 	<!--End Google Tag Manager-->
-	<meta charset="utf-8" />
-	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description" />
-	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author" />
+	<meta charset="utf-8"/>
+	<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
+	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
 	<title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-	<link href="../images/favicon.ico" rel="shortcut icon" />
-	<link href="../css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../images/favicon.ico" rel="shortcut icon"/>
+	<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 	<!-- Important Owl stylesheet -->
-	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
-	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
-	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
+	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
+	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 	<!-- Custom CSS -->
-	<link href="../css/style.css" rel="stylesheet" />
+	<link href="../css/style.css" rel="stylesheet"/>
 	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
@@ -64,7 +62,7 @@
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header page-scroll">
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
-						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg" /></a>
+						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg"/></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
@@ -90,7 +88,7 @@
 		<div id="content">
 			<div class="container-fluid">
 				<div class="row">
-					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;" /> </div>
+					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/> </div>
 				<!-- row end -->
 			</div>
 			<!-- container-fluid end for slider -->
@@ -124,7 +122,7 @@
 							<p align="justify"> Response spectrum is one of the useful tools of earthquake engineering for analyzing the performance of structures especially in earthquakes, since many systems behave as single degree of freedom systems. Thus, if you can find out the natural frequency of the structure, then the peak response of the building can be estimated by reading the value from the ground response spectrum for the appropriate frequency. In most building codes in seismic regions, this value forms the basis for calculating the forces that a structure must be designed to resist (seismic analysis).
 								<br/> A response spectrum is a plot of the maximum response amplitude (displacement, velocity or acceleration) versus time period of many linear single degree of freedom oscillators to a give component of ground motion. The resulting plot can be used to select the response of any linear SDOF oscillator, given its natural frequency of oscillation. One such use is in assessing the peak response of buildings to earthquakes.
 								<br/>
-								<br/> <img src="6.jpg" />
+								<br/> <img src="6.jpg"/>
 								<br/>
 							</p>
 						</div>
@@ -197,11 +195,11 @@
 		});
 	});
 	</script>
-</body>
-<!-- jQuery -->
 
-</html>
-<!-- Custom Theme JavaScript -->
+
+
+
+
 <script src="../js/custom.js"></script>
 <!-- Include js plugin -->
 <script src="../vendors/owl-carousel/owl.carousel.js"></script>
@@ -231,14 +229,14 @@ $(document).ready(function() {
 	});
 });
 </script>
-</body>
-<!-- jQuery -->
 
-</html>
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
+
+
+
+
+
+
 	<!--Google Tag Manager-->
 	<script class="gtm">
 	(function(w, d, s, l, i) {
@@ -256,20 +254,20 @@ $(document).ready(function() {
 	})(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
 	</script>
 	<!--End Google Tag Manager-->
-	<meta charset="utf-8" />
-	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description" />
-	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author" />
+	<meta charset="utf-8"/>
+	<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
+	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
 	<title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-	<link href="../images/favicon.ico" rel="shortcut icon" />
-	<link href="../css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../images/favicon.ico" rel="shortcut icon"/>
+	<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 	<!-- Important Owl stylesheet -->
-	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
-	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
-	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
+	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
+	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 	<!-- Custom CSS -->
-	<link href="../css/style.css" rel="stylesheet" />
+	<link href="../css/style.css" rel="stylesheet"/>
 	<script src="tabs.js" type="text/javascript"></script>
 	<script>
 	(function(i, s, o, g, r, a, m) {
@@ -285,9 +283,9 @@ $(document).ready(function() {
 	ga('create', 'UA-67558473-1', 'auto');
 	ga('send', 'pageview');
 	</script>
-</head>
 
-<body class="index" id="page-top">
+
+
 	<!--Google Tag Manager (noscript)-->
 	<noscript class="gtm">
 		<iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe>
@@ -301,7 +299,7 @@ $(document).ready(function() {
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header page-scroll">
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
-						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/logo-new.png" /></a>
+						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/logo-new.png"/></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
@@ -327,7 +325,7 @@ $(document).ready(function() {
 		<div id="content">
 			<div class="container-fluid">
 				<div class="row">
-					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;" /> </div>
+					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/> </div>
 				<!-- row end -->
 			</div>
 			<!-- container-fluid end for slider -->
@@ -361,7 +359,7 @@ $(document).ready(function() {
 							<p align="justify"> Response spectrum is one of the useful tools of earthquake engineering for analyzing the performance of structures especially in earthquakes, since many systems behave as single degree of freedom systems. Thus, if you can find out the natural frequency of the structure, then the peak response of the building can be estimated by reading the value from the ground response spectrum for the appropriate frequency. In most building codes in seismic regions, this value forms the basis for calculating the forces that a structure must be designed to resist (seismic analysis).
 								<br/> A response spectrum is a plot of the maximum response amplitude (displacement, velocity or acceleration) versus time period of many linear single degree of freedom oscillators to a give component of ground motion. The resulting plot can be used to select the response of any linear SDOF oscillator, given its natural frequency of oscillation. One such use is in assessing the peak response of buildings to earthquakes.
 								<br/>
-								<br/> <img src="6.jpg" />
+								<br/> <img src="6.jpg"/>
 								<br/>
 							</p>
 						</div>
@@ -434,7 +432,7 @@ $(document).ready(function() {
 		});
 	});
 	</script>
-</body>
-<!-- jQuery -->
 
-</html>
+
+
+</body><!-- jQuery --><!-- jQuery --><!-- jQuery --></html><!-- Custom Theme JavaScript -->
