--- a/src/lab/exp5/Procedure.html
+++ b/src/lab/exp5/Procedure.html
@@ -1,6 +1,10 @@
-http://vlab.co.in/broad-area-civil-engineeringen">
+<html><head><!--Google Tag Manager--><script class="gtm">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W59SWTR');</script><!--End Google Tag Manager--></head><body class="index" id="page-top"><!--Google Tag Manager (noscript)--><noscript class="gtm"><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe></noscript><!--End Google Tag Manager (noscript)-->http://vlab.co.in/broad-area-civil-engineeringen"&gt;
 
-<head>
+
 	<!--Google Tag Manager-->
 	<script class="gtm">
 	(function(w, d, s, l, i) {
@@ -18,20 +22,20 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 	})(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
 	</script>
 	<!--End Google Tag Manager-->
-	<meta charset="utf-8" />
-	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description" />
-	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author" />
+	<meta charset="utf-8"/>
+	<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
+	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
 	<title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-	<link href="../images/favicon.ico" rel="shortcut icon" />
-	<link href="../css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../images/favicon.ico" rel="shortcut icon"/>
+	<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 	<!-- Important Owl stylesheet -->
-	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
-	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
-	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
+	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
+	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 	<!-- Custom CSS -->
-	<link href="../css/style.css" rel="stylesheet" />
+	<link href="../css/style.css" rel="stylesheet"/>
 	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
@@ -47,9 +51,9 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 	ga('create', 'UA-67558473-1', 'auto');
 	ga('send', 'pageview');
 	</script>
-</head>
 
-<body class="index" id="page-top">
+
+
 	<!--Google Tag Manager (noscript)-->
 	<noscript class="gtm">
 		<iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe>
@@ -63,7 +67,7 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header page-scroll">
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
-						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg" /></a>
+						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg"/></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
@@ -89,7 +93,7 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 		<div id="content">
 			<div class="container-fluid">
 				<div class="row">
-					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;" /> </div>
+					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/> </div>
 				<!-- row end -->
 			</div>
 			<!-- container-fluid end for slider -->
@@ -192,7 +196,7 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 		});
 	});
 	</script>
-</body>
-<!-- jQuery -->
 
-</html>
+
+
+</body><!-- jQuery --></html>
