--- a/src/lab/exp6/Introduction.html
+++ b/src/lab/exp6/Introduction.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
 	<!--Google Tag Manager-->
 	<script class="gtm">
 	(function(w, d, s, l, i) {
@@ -19,20 +17,20 @@
 	})(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
 	</script>
 	<!--End Google Tag Manager-->
-	<meta charset="utf-8" />
-	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description" />
-	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author" />
+	<meta charset="utf-8"/>
+	<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
+	<meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
 	<title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-	<link href="../images/favicon.ico" rel="shortcut icon" />
-	<link href="../css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../images/favicon.ico" rel="shortcut icon"/>
+	<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 	<!-- Important Owl stylesheet -->
-	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
-	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
-	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
+	<link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
+	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 	<!-- Custom CSS -->
-	<link href="../css/style.css" rel="stylesheet" />
+	<link href="../css/style.css" rel="stylesheet"/>
 	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
@@ -64,7 +62,7 @@
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header page-scroll">
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
-						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg" /></a>
+						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg"/></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
@@ -90,7 +88,7 @@
 		<div id="content">
 			<div class="container-fluid">
 				<div class="row">
-					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;" /> </div>
+					<hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/> </div>
 				<!-- row end -->
 			</div>
 			<!-- container-fluid end for slider -->
@@ -123,7 +121,7 @@
 						<div class="content" id="experiment-article-section-1-content">
 							<p align="justify"> All the real structures are actually infinite degree of freedom systems. However, for the purpose of studying their dynamic behaviour we can idealize them into single or multi degree of freedom systems. If mass of the structure can be lumped at different locations in the structure then the dynamic behaviour consists of same number of modes of vibration. Such structure is called a multi degree of freedom system. Typically in a multi-storey building, masses of different elements can be lumped at centre of mass at each slab level.
 								<br/>
-								<br/> <img src="5.jpg" />
+								<br/> <img src="5.jpg"/>
 								<br/>
 								<br/>
 							</p>
@@ -197,7 +195,7 @@
 		});
 	});
 	</script>
-</body>
-<!-- jQuery -->
 
-</html>
+
+
+</body><!-- jQuery --></html>
